--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -81,14 +81,25 @@ border-color: rgb(0, 0, 0);</string>
           <locale language="English" country="UnitedKingdom"/>
          </property>
          <property name="text">
-          <string>Load</string>
+          <string>Load mesh</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
       </layout>
+     </item>
+     <item>
+      <widget class="QPushButton" name="m_loadHDRBtn">
+       <property name="styleSheet">
+        <string notr="true">font: 700 13pt &quot;Helvetica Neue&quot;;
+border-color: rgb(0, 0, 0);</string>
+       </property>
+       <property name="text">
+        <string>Load HDRI</string>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QVBoxLayout" name="m_testSpace">
